--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
  <body>
    <!--  <iframe name="dummy" style="display:none;"></iframe> -->
-  <form method="POST" action='http://localhost:5000/submit' enctype="multipart/form-data">
+  <form method="POST" action='http://192.12.245.161:5000/submit' enctype="multipart/form-data">
     <input type="file" name="upload"><br>
     <input type="submit">
   </form>
