Fixing web interface to run on GENI; also adding load balancer to flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
  <body>
    <!--  <iframe name="dummy" style="display:none;"></iframe> -->
   <form method="POST" action='http://192.12.245.161:5000/submit' enctype="multipart/form-data">
-    <input type="file" name="upload"><br>
+    <input type="file" name="image"><br>
     <input type="submit">
   </form>
  </body>
